Changed to work in progress

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-<h1>Hello World!</h1>
-<p>I really hope this works<p>
+<h1>Ryan Pecharo - rtpe.ch</h1>
+<p>This is a work in progress personal site.</p>
 </body>
 </html>
