--- a/404.html
+++ b/404.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1>404 - rtpe.ch</h1>
-  <p>Something went wrong. Please check the URL or <a href="rtpe.ch">return to home</a></p>
+  <p>Something went wrong. Please check the URL or <a href="https://rtpe.ch">return to home</a></p>
 </body>
 </html>
