--- a/404.html
+++ b/404.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>404 - rtpe.ch</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>404 - rtpe.ch</h1>
-  <p>Something went wrong. Please check the URL or <a href="https://rtpe.ch">return to home</a></p>
+  <p>Something went wrong. Please check the URL or <a href="/">return to home</a>.</p>
 </body>
 </html>
