Changed to summary of me and link to LinkedIn

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Ryan Pecharo - rtpe.ch</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Ryan Pecharo - rtpe.ch</h1>
-<p>This is a work in progress personal site.</p>
+<p>Hello! I am a student at Villanova University stuyding Chemical Enginering with a minor in Philosophy.</p>
+<p>This site is a work in progress. For now please check out my <a href="https://www.linkedin.com/in/rtpech/">LinkedIn</a>.</p>
+<div class="sep"></div>
 </body>
 </html>
