--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Ryan Pecharo - rtpe.ch</h1>
 <p>Hello! I am a student at Villanova University stuyding Chemical Enginering with a minor in Philosophy.</p>
-<p>This site is a work in progress. For now please check out my <a href="https://www.linkedin.com/in/rtpech/">LinkedIn</a>.</p>
+<p>I am currently searching for an internship during the summer of 2023. Check out my <a href="https://www.linkedin.com/in/rtpech/">LinkedIn</a> for more information.</p>
 <div class="sep"></div>
 </body>
 </html>
