No longer searching for internship

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Ryan Pecharo - rtpe.ch</h1>
-<p>Hello! I am a student at Villanova University stuyding Chemical Enginering with a minor in Philosophy.</p>
-<p>I am currently searching for an internship during the summer of 2023. Check out my <a href="https://www.linkedin.com/in/rtpech/">LinkedIn</a> for more information.</p>
+<h3>rtpe.ch</h3>
+<p>Hello! My name is Ryan Pecharo and I am a student at Villanova University studying Chemical Engineering with a minor in Philosophy. Check out my <a href="https://www.linkedin.com/in/rtpech/">LinkedIn</a> for more information.</p>
 <div class="sep"></div>
 </body>
 </html>
