Added device width, added dark mode

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 	<title>Ryan Pecharo - rtpe.ch</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <h3>rtpe.ch</h3>
-<p>Hello! My name is Ryan Pecharo and I am a student at Villanova University studying Chemical Engineering with a minor in Philosophy. Check out my <a href="https://www.linkedin.com/in/rtpech/">LinkedIn</a> for more information.</p>
+<p>Hello! My name is Ryan Pecharo and I am a senior at Villanova University studying Chemical Engineering with a minor in Philosophy. Please visit my <a href="https://www.linkedin.com/in/rtpech/">LinkedIn</a> for more information.</p>
 <div class="sep"></div>
 </body>
 </html>
