Changed 404.html to redirect to index.html

--- a/404.html
+++ b/404.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>404 - rtpe.ch</title>
-    <link rel="stylesheet" href="style.css">
+  <script>
+    window.location.href = '/';
+  </script>
 </head>
 <body>
-<h1>404 - rtpe.ch</h1>
-  <p>Something went wrong. Please check the URL or <a href="/">return to home</a>.</p>
 </body>
 </html>
