Updating graduation status.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h3>rtpe.ch</h3>
-<p>Hello! My name is Ryan Pecharo and I am a senior at Villanova University studying Chemical Engineering with a minor in Philosophy. Please visit my <a href="https://www.linkedin.com/in/rtpech/">LinkedIn</a> for more information.</p>
+<p>Hello! My name is Ryan Pecharo and I recently graduated from Villanova University with a degree in Chemical Engineering and a minor in Philosophy. Please visit my <a href="https://www.linkedin.com/in/rtpech/">LinkedIn</a> for more information.</p>
 <div class="sep"></div>
 </body>
 </html>
