Added career info
Added that I work at the vit plant now, and edited the title and removed the header because I didn't feel like having it there anymore

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ryan Pecharo - rtpe.ch</title>
+	<title>rtpe.ch</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<h3>rtpe.ch</h3>
-<p>Hello! My name is Ryan Pecharo and I recently graduated from Villanova University with a degree in Chemical Engineering and a minor in Philosophy. Please visit my <a href="https://www.linkedin.com/in/rtpech/">LinkedIn</a> for more information.</p>
+<p>Hello! My name is Ryan Pecharo and I currently work at the Hanford Vitrification Plant as a Rotational Engineer. Before that, I graduated from Villanova University with a degree in Chemical Engineering and a minor in Philosophy. Please visit my <a href="https://www.linkedin.com/in/rtpech/">LinkedIn</a> for more information.</p>
 <div class="sep"></div>
 </body>
 </html>
