--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<p>Hello! My name is Ryan Pecharo and I currently work at the Hanford Vitrification Plant as a Rotational Engineer. Before that, I graduated from Villanova University with a degree in Chemical Engineering and a minor in Philosophy. Please visit my <a href="https://www.linkedin.com/in/rtpech/">LinkedIn</a> for more information.</p>
+<p>Hello! My name is Ryan Pecharo and I currently work for Amentum at the Hanford Vitrification Plant as an Engineer. Before that, I studied Chemical Engineering at Villanova University. Please visit my <a href="https://www.linkedin.com/in/rtpech/">LinkedIn</a> for more information.</p>
 <div class="sep"></div>
 </body>
 </html>
